--- a/MyFirstProjectGemini.ipynb
+++ b/MyFirstProjectGemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObXzWuoTSNR4dkzOqHKXPS",
+      "authorship_tag": "ABX9TyOW/MtjaBEGFQyIlJNZxvd4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,10 +223,48 @@
         "\n"
       ],
       "metadata": {
-        "id": "rZ7qiiug2BKX"
+        "id": "rZ7qiiug2BKX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef2ecb23-e42f-4292-a042-87c398327ffa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Esperando comando... fim\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!apt-get install libopencv-dev python-opencv -y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yuzj2WnAUZUP",
+        "outputId": "9b797e41-6f5e-42fa-e3c8-ae03457daffa"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "E: Unable to locate package python-opencv\n"
+          ]
+        }
+      ]
     }
   ]
 }
